--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#tournament-info">Home</a></li>
             <li><a href="#about">About Tournament</a></li>
             <li><a href="#rules">Rules</a></li>
             <li><a href="#registration">Register Now</a></li>
@@ -24,10 +24,13 @@
     </nav>
 
     <main>
-        <section id="home" class="page">
-            <h2>Welcome to the Esports Tournament!</h2>
+        <section id="tournament-info" class="page">
+            <div class="image-container">
+                <img src="Thumbnail.png" alt="Tournament Image">
+            </div>
+            <p class="tournament-description">Join the ultimate Free Fire tournament! Compete against top players, showcase your skills, and win amazing prizes. This is your chance to become a legend!</p>
+            <h2>Welcome!</h2>
             <p>Get ready for an epic battle in Free Fire. Register your team now!</p>
-            <button onclick="location.href='#registration'">Register</button>
         </section>
 
         <section id="about" class="page" style="display:none;">
