--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <section id="rules" class="page" style="display:none;">
             <h2>Tournament Rules</h2>
             <ul>
+                <li>This Tournament is a Paid Tournament.</li>
                 <li>Each team must consist of 4 players.</li>
                 <li>All players must be 16 years or older.</li>
                 <li>No emulators allowed.</li>
@@ -84,5 +85,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
