--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <p>This tournament brings together the best Free Fire players to compete for glory and exciting prizes. Form your squad, strategize, and conquer the battlefield!</p>
             <h3>Prizes:</h3>
             <ul>
-                <li>1st Place: Cash Prize + In-game items</li>
-                <li>2nd Place: In-game items + Vouchers</li>
-                <li>3rd Place: In-game items</li>
+                <li>1st Place: Cash Prize</li>
+                <li>2nd Place: Cash Prize</li>
+                <li>3rd Place: Cash Prize</li>
             </ul>
         </section>
 
@@ -85,6 +85,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
