--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="discord-box">
                 <h3>Final Step: Join Our Discord</h3>
                 <p>You must join our Discord server to receive the room ID and password.</p>
-                <a href="https://discord.gg/YOUR_INVITE_LINK" target="_blank" class="discord-button">Join Discord Server</a>
+                <a href="https://discord.gg/9Wzn5vjJDZ" target="_blank" class="discord-button">Join Discord Server</a>
             </div>
             <button onclick="window.location.reload()" class="back-btn">Back to Home</button>
         </section>
@@ -94,3 +94,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
