--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="hero-stats">
                     <div class="stat-card" data-aos="zoom-in" data-aos-delay="100">
                         <i class="fas fa-trophy"></i>
-                        <h3>₹50,000</h3>
+                        <h3>₹5,000</h3>
                         <p>Prize Pool</p>
                     </div>
                     <div class="stat-card" data-aos="zoom-in" data-aos-delay="200">
@@ -135,19 +135,19 @@
                 <div class="prize-card gold" data-aos="flip-left" data-aos-delay="100">
                     <div class="rank-badge">🥇</div>
                     <h3>1st Place</h3>
-                    <p class="prize-amount">₹25,000</p>
+                    <p class="prize-amount">₹2,500</p>
                     <p class="prize-desc">Winner Winner Chicken Dinner</p>
                 </div>
                 <div class="prize-card silver" data-aos="flip-left" data-aos-delay="200">
                     <div class="rank-badge">🥈</div>
                     <h3>2nd Place</h3>
-                    <p class="prize-amount">₹15,000</p>
+                    <p class="prize-amount">₹1,500</p>
                     <p class="prize-desc">Runner Up</p>
                 </div>
                 <div class="prize-card bronze" data-aos="flip-left" data-aos-delay="300">
                     <div class="rank-badge">🥉</div>
                     <h3>3rd Place</h3>
-                    <p class="prize-amount">₹10,000</p>
+                    <p class="prize-amount">₹1,000</p>
                     <p class="prize-desc">Second Runner Up</p>
                 </div>
             </div>
@@ -184,10 +184,10 @@
         <div class="social-section" data-aos="fade-up">
             <h3>Follow Us</h3>
             <div class="social-links">
-                <a href="#" class="social-link discord" aria-label="Discord">
+                <a href="https://discord.gg/TBXE3zeNAA" class="social-link discord" aria-label="Discord">
                     <i class="fab fa-discord"></i>
                 </a>
-                <a href="#" class="social-link youtube" aria-label="YouTube">
+                <a href="https://www.youtube.com/@SRM-Esports" class="social-link youtube" aria-label="YouTube">
                     <i class="fab fa-youtube"></i>
                 </a>
                 <a href="#" class="social-link instagram" aria-label="Instagram">
@@ -406,3 +406,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
